--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                                     </div>
                                 </div>
                                 
-                                <p data-aos="fade-right" data-aos-duration="1500"> Vous pouvez tester votre niveau au tri sélectif sur ce lien <a class="h3 titreenv" href="https://quiz.syded-lot.fr/" target="_blank"> ici <img style ="height: 25px; color:#95c11f; " src="/img/smile.svg"> </a>.</p>
+                                <p data-aos="fade-right" data-aos-duration="1500"> Vous pouvez tester votre niveau au tri sélectif sur ce lien <a class="h3 titreenv" href="https://quiz.syded-lot.fr/" target="_blank"> ici <img style ="height: 25px; color:#95c11f; " src="img/smile.svg"> </a>.</p>
                                 <p>Pour rappel, Nutergia tri et met en place une signalétique afin de simplifier et d’harmoniser les zones de tri internes.</p>
 
                                 <div class="row">
