--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                  <div class="row " data-aos="fade-up" data-aos-duration="1500">
                             <div class="banner-left col-lg-3">
                                 <img
-                                    src="img/antoine.JPG"
+                                    src="img/amaury.jpg"
                                     class="img-fluid superround"
                                     alt=""
                                     style=""
@@ -256,7 +256,7 @@
                                 </div>
                             </div><div class="banner-left col-lg-3">
                                 <img
-                                    src="img/antoine.JPG"
+                                    src="img/justine.webp"
                                     class="img-fluid superround"
                                     alt=""
                                     style=""
