--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                     </div>
                 </div>
             
- <div class="row section-top-border" data-aos="fade-up" data-aos-duration="1500">
+ <div class="row " data-aos="fade-up" data-aos-duration="1500">
                             <div class="banner-left col-lg-3">
                                 <img
                                     src="img/antoine.JPG"
