--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-lg-9"></div>
-                                    <div class="col-lg-3">Antoine Lagarde</div>
+                                    <div class="col-lg-3">Antoine Lagarde, , Directeur général</div>
                                 </div>
                             </div>
                             </div>
@@ -213,8 +213,8 @@
                                     </p>
                                 </div>
                                 <div class="row">
-                                    <div class="col-lg-10"></div>
-                                    <div class="col-lg-2">Delphine  </div>
+                                    <div class="col-lg-6"></div>
+                                    <div class="col-lg-6">Delphine Daures, service Qualité</div>
                                 </div>
                             </div><div class="banner-left col-lg-3">
                                 <img
@@ -248,8 +248,8 @@
                                     </p>
                                 </div>
                                 <div class="row">
-                                    <div class="col-lg-10"></div>
-                                    <div class="col-lg-2">Amaury </div>
+                                    <div class="col-lg-5"></div>
+                                    <div class="col-lg-7">Amaury Mathieu, service Commercial </div>
                                 </div>
                             </div>
                             </div>
@@ -270,8 +270,8 @@
                                     </p>
                                 </div>
                                 <div class="row">
-                                    <div class="col-lg-8"></div>
-                                    <div class="col-lg-4">Justine & Marie-Emilie</div>
+                                    <div class="col-lg-3"></div>
+                                    <div class="col-lg-9">Justine Blanc & Marie-Emilie Jean, Ressources humaines</div>
                                 </div>
                             </div><div class="banner-left col-lg-3">
                                 <img
@@ -313,8 +313,8 @@
                                     </p>
                                 </div>
                                 <div class="row">
-                                    <div class="col-lg-10"></div>
-                                    <div class="col-lg-1">&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;Céline</div>
+                                    <div class="col-lg-6"></div>
+                                    <div class="col-lg-6">&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;Céline Ravello, Conseille Santé</div>
                                 </div>
                             </div>
                             </div>
