--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-lg-6"></div>
-                                    <div class="col-lg-6">Antoine Lagarde, , Directeur général</div>
+                                    <div class="col-lg-6">Antoine Lagarde, Directeur général</div>
                                 </div>
                             </div>
                             </div>
@@ -271,7 +271,7 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-lg-3"></div>
-                                    <div class="col-lg-9">Justine Blanc & Marie-Emilie Jean, Ressources humaines</div>
+                                    <div class="col-lg-9">Justine Blanc & Marie-Emilie Jean, service Ressources humaines</div>
                                 </div>
                             </div><div class="banner-left col-lg-3">
                                 <img
@@ -314,7 +314,7 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-lg-6"></div>
-                                    <div class="col-lg-6">&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;Céline Ravello, Conseille Santé</div>
+                                    <div class="col-lg-6">&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;Céline Ravello, service Conseille Santé</div>
                                 </div>
                             </div>
                             </div>
