--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-lg-5"></div>
-                                    <div class="col-lg-7">Amaury Mathieu, service Commercial </div>
+                                    <div class="col-lg-7">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Amaury Mathieu, service Commercial </div>
                                 </div>
                             </div>
                             </div>
@@ -270,8 +270,8 @@
                                     </p>
                                 </div>
                                 <div class="row">
-                                    <div class="col-lg-3"></div>
-                                    <div class="col-lg-9">Justine Blanc & Marie-Emilie Jean, service Ressources humaines</div>
+                                    <div class="col-lg-1"></div>
+                                    <div class="col-lg-11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Justine Blanc & Marie-Emilie Jean, service Ressources humaines</div>
                                 </div>
                             </div><div class="banner-left col-lg-3">
                                 <img
@@ -313,8 +313,8 @@
                                     </p>
                                 </div>
                                 <div class="row">
-                                    <div class="col-lg-6"></div>
-                                    <div class="col-lg-6">&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;Céline Ravello, service Conseille Santé</div>
+                                    <div class="col-lg-5"></div>
+                                    <div class="col-lg-7">&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;Céline Ravello, service Conseille Santé</div>
                                 </div>
                             </div>
                             </div>
