--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-lg-6"></div>
-                                    <div class="col-lg-6 ">Delphine Daures, service Qualité</div>
+                                    <div class="col-lg-6 ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Delphine Daures, service Qualité</div>
                                 </div>
                             </div><div class="banner-left col-lg-3">
                                 <img
