--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                         <p>Bonjour à toutes et à tous,</p>
                         <p class="justify">
                             Durant la <strong>Semaine Européenne de la Réduction des Déchets (SERD),</strong> du 22 au
-                            30 novembre, Mme EON, Animatrice prévention déchets pour le SYDED* vous a proposé une
+                            30 novembre, Mme EON, animatrice prévention déchets pour le SYDED* vous a proposé une
                             animation « Roue du Tri » lors de la pause déjeuner. Voici quelques témoignages et quelques
                             photos pour illustrer l’animation à Causse-et-Diège et à Capdenac.
                         </p>
@@ -158,7 +158,7 @@
                                     data-aos-duration="1500" />
                             </div>
                             <div class="col-lg-10 justify" >
-                                Syndicat Département pour l’Elimination des Déchets. Depuis 1996, ce syndicat a pour
+                                Syndicat Département pour l’Élimination des Déchets. Depuis 1996, ce syndicat a pour
                                 vocation de
                                 <strong
                                     >gérer le traitement des déchets ménagers et assimilés du département du Lot</strong
@@ -187,7 +187,7 @@
                                         nombreuses et nombreux à faire en sorte de diminuer l’impact environnemental de
                                         nos déchets. Cette animation du SYDED ainsi que l’harmonisation de notre
                                         signalétique tri a pour objectif de vous accompagner et vous encourager dans
-                                        la pratique du tri à Nutergia mais également chez vous.
+                                        la pratique du tri à Nutergia, mais également chez vous.
                                     <span class="enlufin">»</span></p>
                                 </div>
                                 <div class="row">
@@ -206,7 +206,7 @@
                                         traduisent notre engagement historique en faveur de l’environnement. Cela
                                         commence par le tri de nos déchets, geste qui parait simple mais peut s’avérer
                                         complexe au regard des interprétations et des connaissances de chacun.
-                                        L’intervention du SYDED était vraiment constructive. En dehors de son aspect
+                                        L’intervention du SYDED était vraiment constructive. En-dehors de son aspect
                                         ludique et pédagogique, l’animatrice s’est montrée disponible et accessible pour
                                         répondre à mes questions. Maintenant, il n’y a plus cas mettre en pratique !
                                         <span class="enlufin">»</span>
@@ -265,7 +265,7 @@
                                         trouvé une ambiance détendue avec toujours à l’esprit l’apprentissage de bonnes
                                         pratiques à adopter pour bien réaliser son tri. Les outils éducatifs
                                         et ludiques ont permis des échanges fluides et agréables dans le
-                                        groupe. De plus l’intervenante s’est montrée disponible et claire dans les
+                                        groupe. De plus, l’intervenante s’est montrée disponible et claire dans les
                                         explications. <span class="enlufin">»</span>
                                     </p>
                                 </div>
@@ -377,7 +377,7 @@ Les outils éducatifs et à la fois ludiques ont permis des échanges fluides et
                                                 alt="" />
                                         </div>
 
-                                        <div class="col-lg-4" data-aos="fade-left" data-aos-duration="1500">
+                                        <div class="col-4" data-aos="fade-left" data-aos-duration="1500">
                                             <div class="col-lg-12" >
                                             <img
                                                 src="img/Plan%20de%20travail%204.webp"
