--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-lg-6"></div>
-                                    <div class="col-lg-6">Antoine Lagarde, Directeur général</div>
+                                    <div class="col-lg-6">Antoine Lagarde, Directeur Général</div>
                                 </div>
                             </div>
                             </div>
@@ -208,7 +208,7 @@
                                         complexe au regard des interprétations et des connaissances de chacun.
                                         L’intervention du SYDED était vraiment constructive. En-dehors de son aspect
                                         ludique et pédagogique, l’animatrice s’est montrée disponible et accessible pour
-                                        répondre à mes questions. Maintenant, il n’y a plus cas mettre en pratique !
+                                        répondre à mes questions. Maintenant, il n’y a plus qu'à mettre en pratique !
                                         <span class="enlufin">»</span>
                                     </p>
                                 </div>
@@ -271,7 +271,7 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-lg-1"></div>
-                                    <div class="col-lg-11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Justine Blanc & Marie-Emilie Jean, service Ressources humaines</div>
+                                    <div class="col-lg-11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Justine Blanc & Marie-Emilie Jean, service Ressources Humaines</div>
                                 </div>
                             </div><div class="banner-left col-lg-3">
                                 <img
@@ -305,7 +305,7 @@
                             <div class="col-lg-9 rounded2 editoplein" data-aos="fade-up" data-aos-duration="1500">
                                 <div class="col-lg-12 justify">
                                     <p>
-                                        <br /><span class="enlu">«</span> A l’occasion de la semaine européenne de
+                                        <br /><span class="enlu">«</span> À l’occasion de la semaine européenne de
                                         réduction des déchets, une animatrice du SYDED est venue nous sensibiliser de
                                         manière ludique au tri et traitement des déchets : un bon moyen pour tester nos
                                         connaissances, faire évoluer nos pratiques et agir collectivement.
