--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@ Les outils éducatifs et à la fois ludiques ont permis des échanges fluides et
                                     
                                     
                                     <p>Merci à toutes et à tous pour votre lecture.</p>
-                                    <p>Je vous souhaite une bon tri !</p>
+                                    <p> Bon tri à toutes et à tous !</p>
                                     <p></p>
                                     <div class="row">
                                         <div class="col-lg-9"></div>
