--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                             </h1>
                             <h4 class="text-uppercase">
                                 Lundi 24 et Vendredi 28 novembre 2025<br>
-                                <span><b>Semaine Européenne de la Réduction des Déchets<br>chez Nutergia </b></span>
+                                
                             </h4>
                             <br />
                         </div>
@@ -334,7 +334,7 @@
 Les outils éducatifs et à la fois ludiques ont permis des échanges fluides et agréables dans le groupe. De plus l’intervenante s’est montrée disponible et claire dans les explications.  
                                     </p>-->
                                     <p >
-                                        Vous pouvez tester votre niveau de connaissances au tri sélectif sur ce lien
+                                        Vous pouvez tester votre niveau de connaissances sur le tri sélectif avec ce lien
                                         <a class="h3 titreenv" href="https://quiz.syded-lot.fr/" target="_blank">
                                             ici <img style="height: 25px; color: #95c11f" src="img/smile.svg" /> </a
                                         >.
