--- a/index.html
+++ b/index.html
@@ -157,12 +157,11 @@
                                     data-aos="fade-up"
                                     data-aos-duration="1500" />
                             </div>
-                            <div class="col-lg-10 justify" >
-                                Syndicat Département pour l’Élimination des Déchets. Depuis 1996, ce syndicat a pour
+                            <div class="col-lg-10 justify" style=" font-size: 18px; font-style: italic;">
+                               <br> * <strong> Syndicat Département pour l’Élimination des Déchets </strong> : Depuis 1996, ce syndicat a pour
                                 vocation de
-                                <strong
-                                    >gérer le traitement des déchets ménagers et assimilés du département du Lot</strong
-                                >.
+                                <strong> gérer le traitement des déchets ménagers et assimilés du département du Lot</strong
+                                    >.
                             </div>
                         </div>
                     </div>
@@ -444,7 +443,7 @@ Les outils éducatifs et à la fois ludiques ont permis des échanges fluides et
                             </div>
                         
                     </div>
-                </div>
+                
             </section>
 
             <section class="banner-area relative">
