--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
                                     data-aos="fade-up"
                                     data-aos-duration="1500" />
                             </div>
-                            <div class="col-lg-10 justify" style=" font-size: 18px; font-style: italic;">
-                               <br> * <strong> Syndicat Département pour l’Élimination des Déchets </strong> : Depuis 1996, ce syndicat a pour
+                            <div class="col-lg-10 justify" style=" font-size: 17px; font-style: italic;">
+                               <br> * <strong> Syndicat Départemental pour l’Élimination des Déchets </strong> : Depuis 1996, ce syndicat a pour
                                 vocation de
                                 <strong> gérer le traitement des déchets ménagers et assimilés du département du Lot</strong
                                     >.
